// Generated by github.com/davyxu/protoplus
// DO NOT EDIT!
syntax = "proto3";

option go_package= "./;proto";

package proto;


enum MyEnum {	
	Zero = 0; 
	One = 1; 
	Two = 2; 
}



message MyTypeMini {	
	bool Bool = 1; 
	int32 Int32 = 2; 
	uint32 UInt32 = 3; 
	int64 Int64 = 4; 
	uint64 UInt64 = 5; 
	float Float32 = 6; 
	double Float64 = 7; 
	string Str = 8; 
}


message MySubType {	
	bool Bool = 1; 
	int32 Int32 = 2; 
	uint32 UInt32 = 3; 
	int64 Int64 = 4; 
	uint64 UInt64 = 5; 
	float Float32 = 6; 
	double Float64 = 7; 
	string Str = 8; 
	bytes BytesSlice = 9; 
	repeated bool BoolSlice = 10; 
	repeated int32 Int32Slice = 11; 
	repeated uint32 UInt32Slice = 12; 
	repeated int64 Int64Slice = 13; 
	repeated uint64 UInt64Slice = 14; 
	repeated float Float32Slice = 15; 
	repeated double Float64Slice = 16; 
	repeated string StrSlice = 17; 
	MyEnum Enum = 18; 
	repeated MyEnum EnumSlice = 19; 
}


message MyType {	
	bool Bool = 1; 
	int32 Int32 = 2; 
	uint32 UInt32 = 3; 
	int64 Int64 = 4; 
	uint64 UInt64 = 5; 
	float Float32 = 6; 
	double Float64 = 7; 
	string Str = 8; 
	MySubType Struct = 9; 
	bytes BytesSlice = 10; 
	repeated bool BoolSlice = 11; 
	repeated int32 Int32Slice = 12; 
	repeated uint32 UInt32Slice = 13; 
	repeated int64 Int64Slice = 14; 
	repeated uint64 UInt64Slice = 15; 
	repeated float Float32Slice = 16; 
	repeated double Float64Slice = 17; 
	repeated string StrSlice = 18; 
	repeated MySubType StructSlice = 19; 
	MyEnum Enum = 20; 
	repeated MyEnum EnumSlice = 21; 
}


message LoginREQ {	
}


message LoginACK {	
}

